--- a/style.css
+++ b/style.css
@@ -1,1 +1,8 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+h2 {
+  color: #48c774;
+}
+
+body {
+  padding: 20px;
+}
+/*# sourceMappingURL=style.css.map */
